2006-07-16  Mark Kettenis  <kettenis@gnu.org>

	* arm-tdep.c (arm_saved_pc_after_call): Delete.
	(arm_gdbarch_init): Do not set deprecated_saved_pc_after_call.

2006-07-16  Alfred M. Szmidt  <ams@gnu.org>
	
	* gnu-nat.c: Undefine _process_user_ before including
	<hurd/process_request.h>.
	(gnu_resume): Supply missing argument to error().
	(gnu_read_inferior): Add extra parenthesis around arithmetic
	expression to silence warnings from GCC.
	(gnu_write_inferior): Likewise.
	(gnu_xfer_memory): Changed type of MYADDR to `gdb_byte *'.

2006-07-16  Mark Kettenis  <kettenis@gnu.org>

	* armnbsd-tdep.c (arm_netbsd_elf_init_abi): Use
	svr4_ilp_fetch_link_map_offsets.

2006-07-15  Mark Kettenis  <kettenis@gnu.org>

	* armnbsd-tdep.c: Don't include "nbsd-tdep.h".
	* config/arm/nbsd.mt (TDEPFILES): Remove nbsd-tdep.o.
	(DEPRECATED_TM_FILE): Remove.
	* Makefile.in (armnbsd-tdep.o): Update dependencies.
	
2006-07-14  Joel Brobecker  <brobecker@adacore.com>

	* PROBLEMS: Document threads/2137.

2006-07-13  Mark Kettenis  <kettenis@gnu.org>

	* config/alpha/tm-nbsd.h: Remove file.
	* config/alpha/nbsd.mt (DEPRECATED_TM_FILE): Remove.

2006-07-13  Corinna Vinschen  <vinschen@redhat.com>

	* mips-tdep.c (mips_integer_to_address): Simplify be calling
	extract_signed_integer directly.  Fix comment.

2006-07-13  Corinna Vinschen  <vinschen@redhat.com>

	* m32c-tdep.c (m32c_banked_register): New function.
	(m32c_banked_read): Use m32c_banked_register function to evaluate
	real register number.
	(m32c_banked_write): Ditto.
	(m32c_virtual_frame_pointer): New function.
	(m32c_gdbarch_init): Add set_gdbarch_virtual_frame_pointer call.

2006-07-13  Nathan Sidwell  <nathan@codesourcery.com>

	* m68k-tdep.c (m68k_frame_align): New.
	(m68k_gdbarch_init): Set frame_align here.

2006-07-13  Denis PILAT  <denis.pilat@st.com>

	* interps.c (interpreter_completer): Allocate one more item to the
	'matches' list and set them all to 0 with a xcalloc.

2006-07-13  Nick Roberts  <nickrob@snap.net.nz>
